# raffleRocket

./: .gitignore  Anchor.toml  README.md  package-lock.json
app/: CYPRESS_TESTING.md  README.md  TESTING.md  cypress.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/cypress/: tsconfig.json
app/cypress/e2e/: basic.cy.js  raffle_flow.cy.js  user_profile.cy.js
app/cypress/fixtures/: raffles.json  user_raffles.json
app/cypress/support/: commands.js  e2e.js  index.js
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/components/: ActivityAnalytics.tsx  ActivityCalendar.tsx  ActivityExport.tsx  ActivityFeedWidget.tsx  ActivityItem.tsx  ActivityList.tsx  ActivityNotifications.tsx  ActivitySearch.tsx  ActivitySubscription.tsx  ActivityTimeline.tsx  BuyTicketButton.tsx  ChakraProviders.tsx  CollectionCard.tsx  ColorModeToggle.tsx  CreateRaffleButton.tsx  CreateRaffleModal.tsx  InsightsWidget.tsx  Layout.tsx  LiveActivityFeed.tsx  NFTActivitySection.tsx  NFTBatchActionBar.tsx  NFTCreationForm.tsx  NFTGallery.tsx  NFTGalleryWithBatch.tsx  NFTGrid.tsx  NFTPriceHistory.tsx  NFTSelector.tsx  PriceAlertForm.tsx  Providers.tsx  RaffleCard.tsx  RaffleList.tsx  SocialSharingButtons.tsx  WalletButton.tsx  WalletContextProvider.tsx
app/src/contexts/: UserPreferencesContext.tsx  WalletContextProvider.tsx
app/src/hooks/: useAnalytics.ts  useLocalStorage.ts  useNFTActions.ts  useNFTAnimation.ts  useNFTBatch.ts  (+63 more)
programs/rafflerocket/: Cargo.toml
programs/rafflerocket/src/: lib.rs
scripts/: generate-idl.ts
(+78 files in other folders)
